<resources>
    <string name="app_name">Home Automation</string>
    <string name="signin_text_hint">Mobile No.</string>
    <string name="signin">Sign In</string>
    <string name="forgetPassword">Forgot Password ? </string>
    <string name="SignInwithEmail">SIgn In with User Id</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="do_not_have_account">Do not have Account ?</string>
    <string name="signup">Sign Up</string>
    <string name="enter_password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="have_account">Already Have an Account ?</string>

    <string name="sign_out">Sign Out</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="signed_out">Sign Out</string>
    <string name="hint_phone_number">9860000000</string>
    <string name="hint_verification_code">145214</string>
    <string name="start_phone_auth">send</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>

    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="g">G</string>

    <!--Smart Congfig-->
    <string name="wifi_5g_message">Device dose not support 5G Wifi</string>
    <string name="location_disable_message">Location(GPS) is disable</string>
    <string name="ssid_title">SSID : </string>
    <string name="bssid_title">BSSID : </string>
    <string name="password_title">Password : </string>
    <string name="device_count_title">Device count : </string>
    <string name="package_broadcast">Broadcast</string>
    <string name="package_multicast">Multicast</string>
    <string name="confirm">Confirm</string>
    <string name="smart_congig_progress">Smart Config is </string>
    <string name="room">Rooms</string>
    <string name="devices">Devices</string>
    <string name="addDevices">Add Devices</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">DONE</string>
    <string name="nar">Room Name is Not Valid</string>

</resources>
