<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#d3d3d3"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout


    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:src="@drawable/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp" />
        <LinearLayout

            android:layout_marginTop="50dp"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/largeSizeButton"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivJoinUs"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="TODO" />
        <LinearLayout

            android:orientation="vertical"
            android:layout_marginBottom="@dimen/ten_dp"
            android:background="@drawable/rounded_rect"
            android:layout_width="@dimen/largeSizeButton"
            android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/name"
                    android:inputType="textPersonName"
                    android:hint="@string/name"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    style="@style/formInput"
                    />

                   


                    <AutoCompleteTextView
                        android:id="@+id/phone"
                        android:inputType="phone"
                        android:hint="@string/signin_text_hint"
                        android:drawableStart="@drawable/ic_phone_black_24dp"
                        style="@style/formInput"
                         />



                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:drawableStart="@drawable/ic_email_black_24dp"
                        style="@style/formInput"
                        />


                    <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                        android:id="@+id/password"
                        android:hint="@string/enter_password"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        style="@style/formInput"
                        />


                    <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                        android:id="@+id/confirm_password"
                        android:hint="@string/re_enter_password"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        style="@style/formInput"
                        android:background="@drawable/edittext_background"
                        />

        </LinearLayout>


            <Button
                android:id="@+id/signup"
                android:onClick="signUp"
                android:layout_width="@dimen/smallSizeButton"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/btnsignin_gradient"
                android:text="@string/signup"
                android:textColor="#FFFFFF" />
            <LinearLayout

                android:id="@+id/ask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="26dp"
                android:gravity="center_horizontal">

             
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_account" />

                <TextView
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="addSigninLayouyt"
                    android:padding="@dimen/five_dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signin"
                    android:textColor="@color/md_blue_500" />
            </LinearLayout>





        </LinearLayout>


    </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:visibility="gone"
        android:background="@color/white"
        android:alpha="0.35"
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ProgressBar


        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </RelativeLayout>

    </RelativeLayout>