<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/ten_dp"
    tools:context=".LoginActivity"
    android:background="#3E929090">
    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout

            android:id="@+id/main_login_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:src="@drawable/logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="140dp" />

            <LinearLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/SIemailLayout"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:gravity="center_horizontal"
                >
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/loginLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <ImageView
                        android:id="@+id/ivSignIn"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="15dp"
                        android:contentDescription="Sign in text on registration activity"
                        android:src="@drawable/sign_in" />
                    <LinearLayout

                        android:orientation="vertical"
                        android:layout_marginBottom="@dimen/ten_dp"
                        android:background="@drawable/rounded_rect"
                        android:layout_width="@dimen/largeSizeButton"
                        android:layout_height="wrap_content">
                        <AutoCompleteTextView
                            android:drawableLeft="@drawable/ic_phone_black_24dp"
                            android:id="@+id/userid"
                            android:hint="@string/signin_text_hint"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:inputType="textEmailAddress"
                            android:background="@drawable/edittext_bottom_border"
                            android:padding="@dimen/ten_dp"
                            android:drawablePadding="8dp"
                            />


                            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                                android:id="@+id/password"
                                android:hint="@string/enter_password"
                                android:drawableLeft="@drawable/ic_lock_black_24dp"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:inputType="textEmailAddress"
                                android:background="@drawable/edittext_background"
                                android:padding="@dimen/ten_dp"
                                android:drawablePadding="8dp"
                                />



                    </LinearLayout>



                    <RelativeLayout
                        android:orientation="horizontal"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        >
                        <Button
                            android:onClick="signIn"
                            android:id="@+id/signIn"
                            android:text="@string/signin"
                            android:layout_width="@dimen/smallSizeButton"
                            android:layout_height="wrap_content"
                            android:background="@drawable/btnsignin_gradient"
                            />
                        <TextView
                            android:id="@+id/forgotPassword"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:padding="@dimen/five_dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forgetPassword"
                            android:textColor="@color/md_blue_500" />

                    </RelativeLayout>


                </LinearLayout>
                <Button
                    android:onClick="showLoingAlyout"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btnsignin_gradient"
                    android:id="@+id/SIemail"
                    android:layout_width="@dimen/largeSizeButton"
                    android:layout_height="wrap_content"
                    android:text="@string/SignInwithEmail" />
            </LinearLayout>


            <LinearLayout
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/largeSizeButton"
                android:id="@+id/socialButton"
                android:layout_height="wrap_content"
                android:layout_below="@+id/SIemailLayout"
                android:layout_marginTop="1dp"
                android:gravity="center"
                >

                <Button

                    android:onClick="facebookLogin"
                    android:textColor="@color/white"
                    android:background="@color/fbColor"
                    android:layout_margin="5dp"
                    android:id="@+id/SIfacebook"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook" />

                <Button
                    android:onClick="googleLogin"
                    android:id="@+id/SIgoogle"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="@string/google"
                    android:textColor="@color/white"
                    android:background="@color/GoogleColor"/>

            </LinearLayout>


            <LinearLayout
                android:layout_below="@+id/socialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="26dp"
                android:gravity="center_horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_not_have_account" />

                <TextView
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="showSignuplyout"
                    android:padding="@dimen/five_dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textColor="@color/md_blue_500" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:visibility="gone"
        android:background="@color/white"
        android:alpha="0.35"
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar


            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>